--- a/contrib/udn/CMakeLists.txt
+++ b/contrib/udn/CMakeLists.txt
@@ -1,26 +1,23 @@
-set(name udn)
+check_include_file_cxx(stdint.h HAVE_STDINT_H)
+if(HAVE_STDINT_H)
+    add_definitions(-DHAVE_STDINT_H)
+endif()
 
-set(source_files
-        model/udn.cc
-        helper/udn-helper.cc
+set(examples_as_tests_sources)
+if(${ENABLE_EXAMPLES})
+    set(examples_as_tests_sources    
+        #test/udn-examples-test-suite.cc
         )
+endif()    
 
-set(header_files
-        model/udn.h
-        helper/udn-helper.h
-        )
-
-set(libraries_to_link
-        ${libapplications}
-        )
-
-set(test_sources)
-
-build_contrib_lib_component(
-        "${name}"
-        "${contrib_name}"
-        "${source_files}"
-        "${header_files}"
-        "${libraries_to_link}"
-        "${test_sources}"
-        )
+build_lib(
+    LIBNAME udn
+    SOURCE_FILES model/udn.cc
+                 helper/udn-helper.cc 
+    HEADER_FILES model/udn.h
+                 helper/udn-helper.h
+    LIBRARIES_TO_LINK ${libcore}
+    TEST_SOURCES test/udn-test-suite.cc
+                 ${examples_as_tests_sources}
+)
+    
